WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191797
WKWebViewMacEditingTests.DoNotCrashWhenInterpretingKeyEventWhileDeallocatingView API test is crashing in debug
https://bugs.webkit.org/show_bug.cgi?id=191797
Summary
WKWebViewMacEditingTests.DoNotCrashWhenInterpretingKeyEventWhileDeallocatingV...
Chris Dumez
Reported
2018-11-16 19:17:35 PST
TestWebKitAPI.WKWebViewMacEditingTests.DoNotCrashWhenInterpretingKeyEventWhileDeallocatingView ASSERTION FAILED: sendRightCount >= 1 /Volumes/Data/slave/sierra-debug/build/Source/WebKit/UIProcess/Launcher/mac/ProcessLauncherMac.mm(251) : void WebKit::ProcessLauncher::launchProcess()_block_invoke 1 0x1107bd599 WTFCrash 2 0x117f7abeb WTFCrashWithInfo(int, char const*, char const*, int) 3 0x118780b95 invocation function for block in WebKit::ProcessLauncher::launchProcess() 4 0x7fffb7b6dd91 _xpc_connection_reply_callout 5 0x7fffb7b6dd1f _xpc_connection_call_reply 6 0x7fffb78e58fc _dispatch_client_callout 7 0x7fffb78f2aac _dispatch_main_queue_callback_4CF 8 0x7fffa1d9ad69 __CFRUNLOOP_IS_SERVICING_THE_MAIN_DISPATCH_QUEUE__ 9 0x7fffa1d5c04d __CFRunLoopRun 10 0x7fffa1d5b544 CFRunLoopRunSpecific 11 0x7fffa378c252 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 12 0x10fa1da63 TestWebKitAPI::Util::run(bool*) 13 0x10fb34d5d WKWebViewMacEditingTests_DoNotCrashWhenInterpretingKeyEventWhileDeallocatingView_Test::TestBody() 14 0x10fbdc61a void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 15 0x10fb88c77 void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 16 0x10fb88bb5 testing::Test::Run() 17 0x10fb8a7dd testing::TestInfo::Run() 18 0x10fb8bd87 testing::TestCase::Run() 19 0x10fba4a85 testing::internal::UnitTestImpl::RunAllTests() 20 0x10fbe04ea bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 21 0x10fba44b7 bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 22 0x10fba4378 testing::UnitTest::Run() 23 0x10f96d191 RUN_ALL_TESTS() 24 0x10f96d124 TestWebKitAPI::TestsController::run(int, char**) 25 0x10fb43e0f main 26 0x7fffb791b235 start
Attachments
Patch
(2.56 KB, patch)
2018-11-16 19:31 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-11-16 19:31:26 PST
Created
attachment 355172
[details]
Patch
WebKit Commit Bot
Comment 2
2018-11-16 20:23:57 PST
Comment on
attachment 355172
[details]
Patch Clearing flags on attachment: 355172 Committed
r238341
: <
https://trac.webkit.org/changeset/238341
>
WebKit Commit Bot
Comment 3
2018-11-16 20:23:59 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-11-16 20:24:33 PST
<
rdar://problem/46146922
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug